# qsp-inference

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: README.md  acop-2026-abstract.md  population-inference-guide.md  qsp-inference-usage-slides.html  qsp-inference-usage-slides.md  stage2-sbi-guide.md  statistical-model.md  statistical-model.tex  submodel-inference-guide.md  submodel-inference-slides.html  submodel-inference-slides.md
examples/: regen_submodel_priors.py  stage2_pipeline.py
src/qsp_inference/: __init__.py
src/qsp_inference/audit/: __init__.py  __main__.py  cli.py  plots.py  report.py
src/qsp_inference/auxiliary/: __init__.py  config.py  discovery.py  prior.py
src/qsp_inference/data/: __init__.py  aggregate_quick_estimates.py  aggregate_test_statistics.py  assess_normality.py  combine_test_stats_chunks.py  test_stat_functions.py
tests/: test_vpop_diagnostics.py  test_vpop_weighting.py
tests/integration/: test_submodel_inference_pipeline.py
tests/unit/: test_audit_copula_components.py  test_auxiliary_config.py  test_auxiliary_discovery.py  test_auxiliary_prior.py  test_cascade_cuts.py  test_conflict_labeler.py  test_copula_prior.py  test_copula_transform.py  test_data_processing.py  test_derived_priors.py  test_eigenbasis.py  test_evaluate_targets_to_x.py  test_expected_coverage.py  test_freshness.py  test_importance_reweight.py  test_inference_prior.py  test_inflate_cloud.py  test_npe_training.py  test_parameter_groups.py  test_per_param_calibration.py  test_population_scale.py  test_posterior_parameterizer.py  test_predictive_checks.py  test_predictive_uncertainty_section.py  test_priors_beta_csv.py  test_proposal.py  test_quantile_vpc.py  test_restriction.py  test_sbc.py  test_scenario_transform.py  test_sigma_overlay.py  test_sim_data_assembly.py  test_submodel_inference.py  test_submodel_utils.py  test_target_anchors.py  test_target_resolver.py  test_targets_omega.py  test_temper_prior.py  test_theta_pool_spec.py  test_trajectory_eval.py  (+2 more)
(+39 files in other folders)
